--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bootstrap": "^3.3.7",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-number-format": "^3.0.0-alpha2"
+    "react-number-format": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
