--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "surge --project=build/ --domain=https://home-owner-time.surge.sh"
   },
   "eslintConfig": {
     "extends": "react-app"
