--- a/package.json
+++ b/package.json
@@ -6,19 +6,19 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.25",
-    "@types/node": "13.1.4",
-    "@types/react": "16.9.17",
-    "@types/react-dom": "16.9.4",
-    "axios": "^0.19.0",
+    "@types/jest": "25.1.5",
+    "@types/node": "13.11.0",
+    "@types/react": "16.9.32",
+    "@types/react-dom": "16.9.6",
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "moment": "^2.24.0",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-dom": "^16.12.0",
-    "react-number-format": "^4.3.1",
-    "react-scripts": "3.3.0",
-    "typescript": "3.7.4"
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.0",
+    "react-dom": "^16.13.1",
+    "react-number-format": "^4.4.1",
+    "react-scripts": "3.4.1",
+    "typescript": "3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
